fix(ui): border alignements

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -383,8 +383,8 @@ body.dark {
   }
   .widgetWrapper, ion-card:not(.ion-color), .leaderboardPage ion-list {
     margin-top: 0.5rem;
-    margin-left: -17px;
-    margin-right: -17px;
+    margin-left: -22px;
+    margin-right: -22px;
     border-radius: 0;
   }
   
